# wc-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: dependabot.yml  rust.yml
examples/: main.rs
src/: datetime.rs  lib.rs  models.rs  parser.rs
tests/: integration_test.rs
