[package]
name = "wc-parser"
version = "0.1.0"
edition = "2024"
description = "A decently fast Rust library for parsing WhatsApp chat exports"
license-file = "LICENSE"
documentation = "https://docs.rs/wc-parser"
homepage = "https://github.com/zktaiga/wc-parser"
repository = "https://github.com/zktaiga/wc-parser"

[dependencies]
chrono = "0.4.41"
lazy_static = "1.5.0"
regex = "1.11.1"
rayon = "1.10.0"
memmap2 = "0.9"

[[example]]
name = "main"
path = "examples/main.rs"

